--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
+          #path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
@@ -19,4 +20,6 @@ jobs:
         uses: helaili/jekyll-action@2.4.0
         with: 
           target_branch: gh-pages
+          target_path: build
+          #jekyll_build_options: "--destination ./build"
           token: ${{ secrets.GITHUB_TOKEN }}
