--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://beep.vip" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Xyz Co., LTD." # the name of your site, e.g. ACME Corp.
 
@@ -106,6 +106,6 @@ pagination:
 
   # Optional, the default name of the index file for generated pages (e.g. 'index.html')
   # Without file extension
-  indexpage: 'index'
+  indexpage: 'index.html'
 
 ###########################################################
