--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
+      - name: Changed Files
+        uses: tj-actions/changed-files@v35.5.3
+
 
   # Deployment job
   deploy:
